--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,7 +1,12 @@
 <h1>List of questions</h1>
 
-<ul>
-  <% @questions.each do |q| %>
-    <li><%=link_to q.question_title, question_path(q)%></li>
+<% @questions.each do |q| %>
+  <h4><%= link_to q.question_title, question_path(q) %></h4>
+  <p>Votes: <%= q.votes.count %></p>
+  <p>Answers: <%= q.answers.count %></p>
+  <p>Tags: <% q.tags.each do |t| %>
+    <%= link_to t.name, tag_path(t) %></p>
   <% end %>
-</ul>
+  <p>created on <%= q.created_at %> by <%= q.user.username %></p>
+<% end %>
+
