Add bare bones show page for questions

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -4,9 +4,9 @@
   <h4><%= link_to q.question_title, question_path(q) %></h4>
   <p>Votes: <%= q.votes.count %></p>
   <p>Answers: <%= q.answers.count %></p>
-  <p>Tags: <% q.tags.each do |t| %>
-    <%= link_to t.name, tag_path(t) %></p>
-  <% end %>
+  <p>Tags:<% q.tags.each do |t| %>
+    <%= t.name %>
+  <% end %></p>
   <p>created on <%= q.created_at %> by <%= q.user.username %></p>
 <% end %>
 
