--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,19 @@
 </head>
 <body>
 <h2><a href="<%= root_path %>">Toilet Overflow</a></h2>
+
+  <% if current_user %>
+    Welcome <%= current_user.username %>
+
+    <%= link_to 'Logout', session_path(current_user.id), method: "delete" %>
+  <% else %>
+    <%= link_to 'Login', new_session_path %>
+
+    <%= link_to 'Signup', new_user_path %>
+  <% end %>
+
+  <%= link_to "Create an Account", new_user_path %>
+
 <%= yield %>
 
 </body>
