Complete user authentication

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<h1>Create an Account </h1>
 <div id = "new-user-form">
   <%= form_for :new_user, url: '/users' do |t| %>
     <%= t.label :username %>
