--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,8 @@
     <%= link_to 'Logout', session_path(current_user.id), method: "delete" %>
   <% else %>
     <%= link_to 'Login', new_session_path %>
-
-    <%= link_to 'Signup', new_user_path %>
+    <%= link_to "Create Account", new_user_path %>
   <% end %>
-
-  <%= link_to "Create an Account", new_user_path %>
 
 <%= yield %>
 
