adds show route for answer poster

--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,6 +1,6 @@
 <span>
 <%=link_to answer.question.question_title, answer.question%>
 <%=answer.points%> points,
-by: <%=answer.user.username%>
+by: <%=link_to answer.user.username, answer.user%>
 posted on: <%=answer.created_at%>
 </span>
