Add chosen comment functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h2><%=link_to "Toilet Overflow", root_path %></h2>
+  <img src="http://stream1.gifsoup.com/view4/4067801/overflowing-toilet-o.gif">
   <div class="navbar">
     <% if current_user %>
       Welcome <%= current_user.username %>
