--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,28 +1,51 @@
 <h2><%= @question.question_title %></h2>
 <p><%= @question.content %></p>
 
-  <p>Comments on Question</p>
-  <% @question.comments.each do |qc| %>
+<% if logged_in? %>
+  <%= form_for @question, url: question_votes_path(@question), method: :post do |f| %>
+    <%= f.hidden_field :user_id, value: current_user.id %>
+    <%= f.submit "upvote" %>
+  <% end %>
+
+  <%= form_for @question, url: question_votes_path(@question), method: :post do |f| %>
+    <%= f.hidden_field :user_id, value: current_user.id %>
+    <%= f.submit "downvote" %>
+  <% end %>
+<% end %>
 
 
+<p>Comments on Question</p>
+<% @question.comments.each do |qc| %>
   <p><%= qc.content %></p>
-  <% end %>
+<% end %>
+
+<% if logged_in? %>
   <p><%= link_to "New Comment", new_question_comment_path(@question.id) %></p>
+<% end %>
 
-  <% if !!@fav_answer %>
-    <h4>Favorite Answer: <%= @fav_answer[-1].content %></h4>
+  <% if @fav_answer[0] %>
+    <h4>Favorite Answer: <%= @fav_answer[0].content %></h4>
   <% end %>
 
-  <% @answer.each do |answer| %>
-    <% unless @fav_answer[-1].id == answer.id %>
+<% @answer.each do |answer| %>
+  <% if logged_in? %>
+    <% unless (@fav_answer[0] != nil) && (@fav_answer[0].id == answer.id) %>
     <h4>Answer: <%= answer.content %></h4>
       <%= form_for answer do |f| %>
         <%= f.hidden_field :id %>
         <%= f.submit "Set as favorite" %>
       <% end %>
-      <p>Comments for Answer: <% answer.comments.each do |c| %>
-        <p>- <%= c.content %></p>
-      <% end %></p>
+    <% end %>
+  <% end %>
+  <p>Comments for Answer: <% answer.comments.each do |c| %>
+    <p>- <%= c.content %></p>
+  <% end %></p>
+<% end %>
+
+  <% if logged_in? %>
     <p> <%= link_to "New Comment", new_answer_comment_path(answer.id) %></p>
   <% end %>
+
+<% if logged_in? %>
+<%= link_to "Submit your answer", new_question_answer_path(@question) %>
 <% end %>
